# rust-beginner-journey

./: README.md
01_ownership/: Cargo.toml
01_ownership/examples/: 01_basic.rs  02_crypto_wallet.rs
01_ownership/exercises/: exercise.rs
01_ownership/src/: main.rs
01_владение/: ADVICE.md  README.md
01_владение/examples/: 03_borrowing.rs
02_functions/: ADVICE.md  Cargo.toml  README.md
02_functions/examples/: 01_basic.rs  02_crypto_trading.rs  03_advanced.rs
02_functions/exercises/: exercise.rs
02_functions/src/: main.rs
02_функции/examples/: 02_crypto_trading.rs
02_функции/src/: main.rs
03_clap/examples/: 01_hello_crypto.rs  01b_first_derive.rs  01c_add_flags.rs  02_check_balance.rs  03_send_transaction.rs  exercise.rs
03_clap/src/: main.rs
04_enumerate/: Cargo.toml
04_enumerate/examples/: 01_basic_enumerate.rs  exercise.rs
04_enumerate/src/: main.rs
05_работа с файлами/examples/: 01_write_read_text.rs  exercise.rs
05_работа с файлами/src/: main.rs
06_итераторы/: ADVICE.md  Cargo.toml  README.md
06_итераторы/examples/: 02_map_filter.rs
06_итераторы/src/: main.rs
06_итераторы/tests/: iterator_tests.rs
07_замыкания/: README.md
08_clap/: 00_README_FIRST.md  ADVICE.md  Cargo.toml  README.md  exercise.md  theory_intro.md  Самое подробное объяснение.md
08_clap/examples/: 01_hello_crypto.rs  01a_from_scratch.rs  01d_default_values.rs  01e_optional_values.rs  01f_validation.rs  01g_review.rs  02_builder_pattern.rs  02_check_balance.rs  03_send_transaction.rs  03_subcommands.rs  04_crypto_wallet.rs  04_validation.rs  05_conflicts.rs  06_advanced.rs  07_completion.rs  exercise.rs
08_clap/src/: main.rs
08_whale_tracker/src/: main.rs
09_enumerate/: ADVICE.md  README.md
09_enumerate/examples/: 02_enumerate_with_crypto.rs  03_enumerate_filter.rs  04_enumerate_collect.rs
09_enumerate/tests/: enumerate_tests.rs
1.1_Установка и управление версиями Rust/: README.md
1.2_Cargo_подробное_руководство/: README.md
1.3_Форматирование кода/: README.md
10_file_io/: ADVICE.md  Cargo.toml  README.md
10_file_io/examples/: 02_json_wallet.rs  03_private_key_binary.rs  04_csv_transactions.rs
10_file_io/tests/: file_io_tests.rs
11_iterators/: Cargo.toml
11_iterators/examples/: 01_basic_iterators.rs  03_chain_zip_flatmap.rs  exercise.rs  (+1 more)
