[package]
name = "enumerate-lesson"
version = "0.1.0"
edition = "2024"
description = "Полный урок по enumerate() в Rust — контекст крипто CLI"

[dependencies]

[[example]]
name = "01_basic_enumerate"
path = "examples/01_basic_enumerate.rs"

[[example]]
name = "02_enumerate_with_crypto"
path = "examples/02_enumerate_with_crypto.rs"

[[example]]
name = "03_enumerate_filter"
path = "examples/03_enumerate_filter.rs"

[[example]]
name = "04_enumerate_collect"
path = "examples/04_enumerate_collect.rs"

[[example]]
name = "exercise"
path = "examples/exercise.rs"
