[package]
name = "clap-deep-dive"
version = "0.1.0"
edition = "2021"
description = "Глубокое погружение в clap - все возможности"

[dependencies]
clap = { version = "4.5", features = ["derive", "env", "string", "unicode", "wrap_help", "suggestions", "color"] }
serde = { version = "1", features = ["derive"], optional = true }
chrono = { version = "0.4", optional = true }

[features]
full = ["serde", "chrono"]
