[package]
name = "clap-crypto-lesson"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive", "env", "unicode", "string"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

# ╔══════════════════════════════════════════════════════════════╗
# ║  ПОЧЕМУ ТАКИЕ ЗАВИСИМОСТИ?                                  ║
# ║  clap 4.5  — самая актуальная стабильная версия              ║
# ║  features: derive — чтобы использовать макросы (меньше кода) ║
# ║  features: env    — чтобы читать API-ключи из переменных     ║
# ║  serde/serde_json — для работы с JSON (RPC-ответы крипты)    ║
# ║  chrono           — для работы с датами (история транзакций) ║
# ╚══════════════════════════════════════════════════════════════╝
